--- a/src/components/style.css
+++ b/src/components/style.css
@@ -6,3 +6,24 @@
   width: 100vw;
   background-color: rgb(56, 4, 4);
 }
+.sidebar {
+  width: 100%;
+  height: 100vh;
+  margin: 0 auto;
+  border: 1px solid red;
+  border-radius: 10px;
+  margin: 5px;
+  padding: 10px;
+  background-color: rgb(226, 225, 223);
+}
+.main {
+  width: 100%;
+  height: 100vh;
+  margin: 0 auto;
+  border: 1px solid red;
+  border-radius: 10px;
+  margin: 5px;
+  padding: 10px;
+  background-color: rgb(206, 203, 200);
+  margin-right: 10px;
+}
