--- a/src/components/budget/cards/shared/style.css
+++ b/src/components/budget/cards/shared/style.css
@@ -14,7 +14,6 @@
   text-align: center;
   transition: transform 0.6s;
   transform-style: preserve-3d;
-  margin-top: -20px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
@@ -48,4 +47,11 @@
   align-items: center;
   justify-content: center;
   font-size: xx-small;
+}
+@media (max-width: 786px) {
+  .cards {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
