--- a/src/components/main/style.css
+++ b/src/components/main/style.css
@@ -16,3 +16,47 @@
   align-items: center;
   background-color: antiquewhite;
 }
+.head {
+  height: 28vh;
+  width: 100%;
+  background-color: antiquewhite;
+  border-radius: 10px;
+  margin: 10px;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.footer {
+  width: 100%;
+  height: 68vh;
+  background-color: antiquewhite;
+  border-radius: 10px;
+  margin: 10px;
+  padding: 10px;
+}
+
+@media (max-width: 786px) {
+  .head {
+    height: auto;
+  }
+
+  .footer {
+    height: auto;
+  }
+  .trans {
+    display: flex;
+  }
+}
+.transactionCards {
+  width: 100%;
+  height: 60%;
+  margin: 20px;
+  padding: 20px;
+}
+.trans {
+  display: flex;
+}
+.trans img {
+  border-radius: 10px;
+}
