--- a/src/components/style.css
+++ b/src/components/style.css
@@ -9,21 +9,19 @@
 .sidebar {
   width: 100%;
   height: 100vh;
-  margin: 0 auto;
-  border: 1px solid red;
+  background-color: antiquewhite;
   border-radius: 10px;
-  margin: 5px;
+  margin: 0 10px;
   padding: 10px;
-  background-color: rgb(226, 225, 223);
 }
-.main {
-  width: 100%;
-  height: 100vh;
-  margin: 0 auto;
-  border: 1px solid red;
-  border-radius: 10px;
-  margin: 5px;
+
+@media (max-width: 786px) {
+  .sidebar {
+    display: none;
+  }
+}
+.sideNavs {
+  font-size: x-small;
+  font-weight: 700;
   padding: 10px;
-  background-color: rgb(206, 203, 200);
-  margin-right: 10px;
 }
