--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -26,3 +26,26 @@
   text-align: center;
   font-family: "Times New Roman", Times, serif, "Courier New";
 }
+#login {
+  background-color: rgb(34, 33, 33);
+  opacity: 0.7;
+  color: white;
+  margin: 0 60px;
+  border-radius: 20px;
+}
+#login:hover {
+  opacity: 1;
+}
+@media (min-width: 786px) {
+  #login {
+    margin: 0 250px;
+  }
+  .logBtn {
+    margin-left: 200px;
+  }
+}
+@media (max-width: 786px) {
+  .logBtn {
+    width: 10%;
+  }
+}
