--- a/src/components/style.css
+++ b/src/components/style.css
@@ -25,3 +25,8 @@
   font-weight: 700;
   padding: 10px;
 }
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
